name:                ti3-sampler
version:             0.1.0
synopsis:            Sample random locations on a TI3 board.
description:         Sample random locations on a TI3 board.
homepage:            https://github.com/jtobin/ti3-sampler
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.io
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable ti3-sampler
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base       >= 4.10 && < 5
    , containers >= 0.5  && < 0.6
    , mwc-random >= 0.13 && < 0.15
    , primitive  >= 0.6  && < 0.7
